src/objects/Step__c.object
<CustomObject>
    <fields>
        <fullName>ChainNameAndPosition__c</fullName>
        <formula>Chain__r.Name + &apos;#&apos; + TEXT(Position__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chain Name and Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <label>Chain</label>
        <referenceTo>Chain__c</referenceTo>
        <relationshipName>Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ConfigurationId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ConfigurationId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ConfigurationName__c</fullName>
        <label>ConfigurationName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipName>Steps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Step</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>